Fix minor spacing issue

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -39,7 +39,7 @@ h1 {
 }
 
 .card-display {
-  width: 360px;
+  width: 540px;
   height: 102%;
   display: flex;
   flex-direction: row;
@@ -69,6 +69,8 @@ h1 {
   border: 35px solid #145757;
   margin-top: 40px;
   transition: transform 0.2s ease-in-out;
+  margin-left: 30px;
+    margin-right: 30px;
 }
 
 .card-display article:hover {
